<resources>
    <string name="app_name">DbSE CoWorking Spaces</string>
    <string name="DbSE">DbSE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="connectionproblem">There\'s a Problem on Connection</string>
    <!-- these strings for lables in co_working_space profile-->
    <string name="name">Name</string>
    <string name="locatoin">Location</string>
    <string name="city">City</string>
    <string name="contacts">Contacts</string>
    <string name="website">Website</string>
    <string name="facebook_page">FacebookPage</string>
    <string name="description">Description</string>
    <string name="classification">Classification</string>
    <string name="fees">Fees</string>
    <string name="locationonmap">Location On Map</string>
    <string name="others">Others</string>
    <string name="submitrating">Rate This Place!</string>
    <string name="events">Events</string>
    <string name="token">eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOjIsImlzcyI6Imh0dHA6XC9cL2xvY2FsaG9zdFwvZGJzZVwvcHVibGljXC9hcGlcL3YxXC9zaWduaW4iLCJpYXQiOjE0OTUyMjAxNjYsImV4cCI6MTQ5NTIyMzc2NiwibmJmIjoxNDk1MjIwMTY2LCJqdGkiOiJBWHE1bzA0QTA0ZDQxSjlWIn0.9QVDzm8ntsItpq8gDltRjQMIyzBSVgf3Iq58ZzZxK_w</string>
    <string name="imageurl">http://5f6bba77.ngrok.io/dbse/public/</string>
    <string name="url">http://5f6bba77.ngrok.io/dbse/public/api/v1/</string>
    <string name="your_string_here">
        <u>LocationOnMap</u>.
    </string>
    <string name="listofschoolsactivityname">Schools</string>
    <string name="listofgovernorates">Governorates</string>
    <string name="schoolprofile">SchoolProfile</string>

    <string name="action_logout">Sign Out</string>
    <string name="register1">Create your</string>
    <string name="register2">account!</string>

    <!--these strings define hints for edit texts in singup form-->
    <string name="signupemail">E-mail</string>
    <string name="signuppassword">Password</string>
    <string name="singupusername">UserName</string>

    <!--these strings define hints for edit texts in edit profile form-->
    <string name="old_email">Old e-mail</string>
    <string name="old_password">Old password</string>
    <string name="new_email">New e-mail</string>
    <string name="new_password">New password</string>
    <string name="new_username">New userName</string>
    <string name="save_changes">Save changes</string>

    <!--string for create account button-->
    <string name="createaccount">Create Account</string>
    <string name="next">NEXT</string>
    <string name="hint_real_name">Real Name</string>
    <string name="emptyerror">Should not be blank</string>
    <string name="confirmationcode">Confirmation Code</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="change">change</string>
    <string name="notypeerror">You Must Select A Type</string>
    <string name="nogendererror">You Must Select Your Gender</string>

    <!--these strings for Sign in activity-->
    <string name="sign_in_email_hint">E-mail</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">Sign Up</string>
    <string name="froget_pass">Forgotten Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in_title">CoWorking Spaces</string>
    <string name="contacts_text">Contancts</string>
    <string name="facebook">Facebook Page</string>
    <string name="forget_pass_title1">We will send a new password</string>
    <string name="emailORusername">UserName or e-mail</string>
    <string name="statelabel">State</string>
    <string name="typelabel">Type</string>
    <string name="genderlabel">Gender</string>




    <!--string for change the second next button to workspace when type is wso or pwso-->
    <string name="yourworkspace">Click to Select Your WorkSpace</string>


    <!--string for hint in coworking spacecode-->
    <string name="coworkingspacecodehint">Enter CoWorkingSpace Code</string>
    <!--string for title of input dialog when user confirm code for working space e-mail-->
    <string name="confirmworkingspaceemail">WorkingSpace E-mail Code</string>
    <!--string for hints in singup activity-->
    <string name="usernamehint">Enter Your UserName</string>
    <string name="passwordhint">Enter Your Password</string>
    <string name="emailhint">Enter Your Email</string>
    <string name="realnamehint">Enter Your Real Name</string>
    <string name="phonehing">Enter Your Phone Number</string>

    <!--string for next buttons in singup-->
    <string name="nextbutton">Next</string>
    <!-- strings for gender radio buttons-->
    <string name="maleradiobutton">Male</string>
    <string name="femalerediobutton">Female</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>

    <!--strings for type spinner-->
    <string name="visitor_spinner">Visitor</string>
    <string name="wso_spinner">WorkSpacOwner</string>
    <string name="pwso_spinner">PremiumWorkSpaceOwner</string>
    <string-array name="types">
        <item></item>
        <item>@string/visitor_spinner</item>
        <item>@string/wso_spinner</item>
        <item>@string/pwso_spinner</item>
    </string-array>
    <string name="visitor">VISITOR</string>
    <string name="wso">WSO</string>
    <string name="pwso">PWSO</string>
    <!--string for search button-->
    <string name="search">Search</string>

    <!-- strings for search labels and texts-->
    <string name="namelabel">Name</string>
    <string name="price">Price</string>
    <string name="lower_bound">From</string>
    <string name="upper_bound">To</string>
    <string name="air_condition">Air Condition</string>
    <string name="private_rooms">Private Rooms</string>
    <string name="data_show">Data Show</string>
    <string name="wifi">Wifi</string>
    <string name="laser_cutter">Laser Cutter</string>
    <string name="printing_3d">3D Printing</string>
    <string name="pcb_printing">PCB Printing</string>
    <string name="girls_area">Girls Area</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="cafeteria">Cafeteria</string>
    <string name="cyber">Cyber</string>
    <string name="preferences">Preferences</string>
    <string name="type">Type</string>
    <string name="free">FREE</string>
    <string name="paid">PAID</string>

    <string-array name="money">
        <item></item>
        <item>@string/free</item>
        <item>@string/paid</item>
    </string-array>


    <string name="eventadress">Address</string>
    <string name="eventdesc">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
