<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/itempadding"
    android:background="@color/dbsecolor"
    android:padding="@dimen/itempadding"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namelabel"
            style="@style/searchdialogitems"
            android:layout_marginTop="@dimen/itempadding"
            android:textColor="@color/white"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namelabel"
            style="@style/searchdialogitemslabels"
            android:id="@+id/co_working_space_search_name"


            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            style="@style/searchdialogitems"
            android:layout_marginTop="@dimen/itempadding"
            android:textColor="@color/white"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            style="@style/searchdialogitemslabels"
            android:id="@+id/co_working_space_search_city"
            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/searchdialogitems"
             android:layout_marginTop="@dimen/itempadding"
             android:textColor="@color/white"
             android:text="@string/type"
             />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittexthieghtsignup"
            android:id="@+id/search_money_spinner"
            style="@android:style/Widget.Spinner.DropDown"
            android:layout_marginBottom="@dimen/itempadding"
            >
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferences"
            style="@style/searchdialogitems"
            android:layout_marginTop="@dimen/itempadding"
            android:textColor="@color/white"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/air_condition"
                android:id="@+id/air_condition_check_box"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_rooms"
                android:id="@+id/private_rooms_check_box"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_show"
                android:id="@+id/data_show_check_box"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi"
                android:id="@+id/wifi_check_box"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laser_cutter"
                android:id="@+id/laser_cutter_check_box"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/printing_3d"
                android:id="@+id/printing_3d_check_box"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pcb_printing"
                android:id="@+id/pcb_printing_check_box"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/girls_area"
                android:id="@+id/girls_area_check_box"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smoking_area"
                android:id="@+id/smoking_area_check_box"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cafeteria"
                android:id="@+id/cafeteria_checkbox"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cyber"
                android:id="@+id/cyber_check_box"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                />

        </LinearLayout>



    </LinearLayout>
</ScrollView>
