<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ahmedsaleh.dbse_schools.Activities.EventProfile"

    android:background="@color/dbsecolor"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/event_profile_text_view"
            android:id="@+id/event_profile_name_label"
            android:text="@string/name"

            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/event_profile_name"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/textview_event_profile"
            android:textSize="30sp"
            android:textColor="@color/eventcolor"
            />
        <EditText
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:id="@+id/event_profile_name_edit_text"
            android:visibility="gone"
            android:layout_marginTop="@dimen/textview_event_profile"
            android:textSize="30sp"
            />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_anchor="@id/ws_profile_scroll_view"
            app:layout_anchorGravity="bottom|right|end"
            app:backgroundTint="@color/buttonsignupcolor"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/event_profile_text_view"
            android:id="@+id/event_profile_address_label"
            android:text="@string/eventadress"

            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/event_profile_address"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/textview_event_profile"
            android:textSize="30sp"
            android:textColor="@color/eventcolor"
            />
        <EditText
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:id="@+id/event_profile_address_edit_text"
            android:layout_marginTop="@dimen/textview_event_profile"
            android:visibility="gone"
            android:textSize="30sp"
            />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_event_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_anchor="@id/ws_profile_scroll_view"
            app:layout_anchorGravity="bottom|right|end"
            app:backgroundTint="@color/buttonsignupcolor"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            style="@style/event_profile_text_view"
            android:id="@+id/event_profile_desc_label"
            android:text="@string/eventdesc"

            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/event_profile_desc"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/textview_event_profile"
            android:textSize="30sp"
            android:textColor="@color/eventcolor"
            />
        <EditText
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:id="@+id/event_profile_desc_edit_text"
            android:layout_marginTop="@dimen/textview_event_profile"
            android:visibility="gone"
            android:textSize="30sp"
            />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_event_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_anchor="@id/ws_profile_scroll_view"
            app:layout_anchorGravity="bottom|right|end"
            app:backgroundTint="@color/buttonsignupcolor"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/paddingforediteventbutton"
        android:background="@color/buttonsignupcolor"
        android:textColor="@color/white"
        android:id="@+id/sumbit_edit_event_button"

        />
    </LinearLayout>

</ScrollView>
